changed the z-index:10 and added new css values in dcl.css to prevent overlap of book cart during search
git-svn-id: svn://vufind-dev/VuFind-PlusProd/trunk@616 28506cad-9c98-f24e-950d-e205d8e2a2e8

--- a/vufind/web/interface/themes/dcl/css/dcl.css
+++ b/vufind/web/interface/themes/dcl/css/dcl.css
@@ -5,7 +5,7 @@
     position: absolute;
 }
 #fixed_container.cling {
-    z-index: 20000;
+    z-index: 10;
     position: fixed;
     top: 0;
     background-color: #ffffff;
@@ -29,8 +29,12 @@
     float: right;
     position: relative;
     width: 320px;
-    z-index: 20000;    
+    z-index: 10;    
 }
+.ui-autocomplete { 
+z-index: 20!important; 
+} 
+
 #book_bag.cling {
 	margin-top: 10px;
 }
